Touch up work link fonts size and colour

--- a/pages/index.html
+++ b/pages/index.html
@@ -32,33 +32,33 @@
         <section id="work-links-container" class="flex-container">
             <div class="work-link">
                 <img src="../images/happy-dog.jpg">
-                <h3>Title Here</h3>
-                <p>www.linkhere.com</p>
+                <h3>Dogs</h3>
+                <p>www.jane-doette.com/dogs</p>
             </div>
             <div class="work-link">
                 <img src="../images/lights-blossoms1.jpg">
-                <h3>Title Here</h3>
-                <p>www.linkhere.com</p>
+                <h3>Lights</h3>
+                <p>www.jane-doette.com/lights</p>
             </div>
             <div class="work-link">
                 <img src="../images/blossom1.jpg">
-                <h3>Title Here</h3>
-                <p>www.linkhere.com</p>
+                <h3>Nature</h3>
+                <p>www.jane-doette.com/nature</p>
             </div>
             <div class="work-link">
                 <img src=../images/sushi.jpg>
-                <h3>Title Here</h3>
-                <p>www.linkhere.com</p>
+                <h3>Food</h3>
+                <p>www.jane-doette.com/food</p>
             </div>
             <div class="work-link">
                 <img src="../images/night.jpg">
-                <h3>Title Here</h3>
-                <p>www.linkhere.com</p>
+                <h3>Night</h3>
+                <p>www.jane-doette.com/night</p>
             </div>
             <div class="work-link">
                 <img src="../images/fashion.jpg">
-                <h3>Title Here</h3>
-                <p>www.linkhere.com</p>
+                <h3>Fashion</h3>
+                <p>www.jane-doette.com/fashion</p>
             </div>
         </section>
     </div>
